9 July 2008
+ Only pulling registered users for slots open.

Version 1.1.2
-----------------------------------------------------------------
2 July 2008
+ Install.sql missing new column. Trying again in update.

30 June 2008
+ Removed the phone number parsing. Got in the way of extensions and
  the like.

Version 1.1.1
-----------------------------------------------------------------
6 June 2008
+ Added js_calendar to signup sheet expiration

21 April 2008
+ Added missing navigation links to sheet listing.
+ Updated: templates/sheet_list.tpl

18 April 2008
+ Added search textfield to slot screen.
+ updated : templates/slot_setup.tpl

10 April 2008
+ Restricted users cannot create signup sheets.

Version 1.1.0
------------------------------------------------------------------
18 March 2008
+ Closing popup windows refreshes the parent now in case where an
  update may be needed.
+ Signup sheets were not saving their key ids properly.
+ Added ability for a sheet to allow multiple signups.
+ Fixed add applicant.
+ Updated: templates/edit_sheet.tpl

7 March 2008
+ Added way to update slots

3 March 2008
+ Added user permissions to signup
+ Removed some unneeded, commented code
+ Added alphabetic reordering
+ Fixed ordering up and downs.
+ Updated: templates/peep_pop.tpl, templates/slot_setup.tpl

28 February 2008
+ Changed slot form to selection method. Previously showed all slots
  causing long page loads on big signups.
+ Added contact email address for sheets.
+ Added url forwarding support.
+ Updated: templates/edit_sheet.tpl, templates/peeps.tpl,
           templates/slot_setup.tpl, img/edit.png, img/delete.png

Version 1.0.2
------------------------------------------------------------------
25 September 2007
+ Changed email to send individually.

21 September 2007
+ Fixed: All slots full message was not displaying.

Version 1.0.1
------------------------------------------------------------------
30 August 2007